--- a/style.css
+++ b/style.css
@@ -64,6 +64,14 @@ button:hover{
     background-color: var(--primary-400);
 }
 
+/* To Do List Button */
+.addButton {
+    background-color: var(--background-100);
+}
+
+.addButton:hover {
+    background-color: var(--primary);
+}
 
 /* sidebar styles */
 
@@ -101,9 +109,6 @@ button:hover{
     background-color: var(--primary);
 }
 
-#content {
-    
-}
 
 header {
     padding: 30px 40px;
@@ -146,6 +151,14 @@ header {
     gap: 30px;
     grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
 }
+
+.project-initals {
+
+   
+    background-color: #ca8134;
+}
+
+
 
 /* Form Styles (for New Project Button) */
 dialog{
@@ -256,7 +269,7 @@ form tip {
     outline: none;
 }
 
-.todo-item{
+.todo-list{
     padding: 20px;
     background-color: var(--background-200);
     border-radius: 10px;
@@ -264,7 +277,7 @@ form tip {
 }
 
 
-.todo-item:hover{
+.todo-list:hover{
     background-color: var(--primary);
 }
 
@@ -346,3 +359,51 @@ td input[type="checkbox"] {
     margin: 10px 0;
   }
   
+
+  /* Modal styles */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed;
+    z-index: 10000; /* Ensure it's on top */
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Black background with transparency */
+  }
+  
+  .modal-content {
+    background-color: var(--background-200);
+    margin: 15% auto;
+    padding: 20px;
+    border-radius: 10px;
+    width:auto;
+    text-align: center;
+    align-items:stretch ;
+    vertical-align:middle;
+  }
+  
+  .close {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    font-size: 24px;
+    cursor: pointer;
+  }
+  
+  .hidden {
+    display: none;
+  }
+
+  .modal-content-todo {
+    background-color: var(--background-200);
+    margin: 15% auto;
+    padding: 20px;
+    border-radius: 10px;
+    width: 40cap;
+    text-align: center;
+    align-items:stretch ;
+    align-items: flex-end;
+    vertical-align:baseline;
+
+  }
